[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"
authors = ["minpeter <kali2005611@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/minpeter/hello-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"